[package]
name = "lpc-rs"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
arrayvec = "0.7.1"
auto_impl = "1.0.1"
bstr = "0.2.17"
cached = "0.34.0"
codespan-reporting = "0.11.0"
decorum = "0.3.1"
delegate = "0.7.0"
educe = "0.4.18"
fs-err = "2.6.0"
if_chain = "1.0.1"
indextree = "4.3.1"
itertools = "0.10.0"
lalrpop-util = "0.19.4"
lazy_format = "1.8.4"
logos = "0.12.0"
modular-bitfield = "0.11.2"
multimap = "0.8.2"
once_cell = "1.10.0"
parking_lot = "0.12.0"
path-absolutize = { version = "3.0.6", features = ["lazy_static_cache"] }
phf = { version = "0.10.0", features = ["macros"] }
refpool = "0.4.3"
regex = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_derive = "1.0.123"
toml = "0.5.8"
tracing = "0.1"
tracing-subscriber = "0.3.11"

[dev-dependencies]
claim = "0.5.0"
indoc = "1.0"

[profile.release]
lto = "thin"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.bench]
incremental = true