[package]
name = "lpc-rs"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
lpc-rs-asm = { path = "./lpc-rs-asm"}
lpc-rs-core = { path = "./lpc-rs-core"}
lpc-rs-errors = { path = "./lpc-rs-errors"}
lpc-rs-function-support = { path = "./lpc-rs-function-support"}
lpc-rs-utils = { path = "./lpc-rs-utils"}

arrayvec = "0.7.1"
auto_impl = "1.0.1"
decorum = "0.3.1"
delegate = "0.7"
educe = "0.4.18"
fs-err = "2.6.0"
if_chain = "1.0.1"
indexmap = { version = "1.8.2", features = ["serde"] }
indextree = "4.3.1"
itertools = "0.10.0"
lalrpop-util = "0.19.4"
lazy_format = "1.8.4"
logos = "0.12.0"
once_cell = "1.10.0"
phf = { version = "0.10.0", features = ["macros"] }
refpool = "0.4.3"
regex = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
tracing = "0.1"
tracing-subscriber = "0.3.11"

[dev-dependencies]
claim = "0.5.0"
indoc = "1.0"

[features]
default = ["max_level_trace", "release_max_level_info"]

# Max log level (development build))
max_level_off = ["tracing/max_level_off"]
max_level_error = ["tracing/max_level_error"]
max_level_warn = ["tracing/max_level_warn"]
max_level_info = ["tracing/max_level_info"]
max_level_debug = ["tracing/max_level_debug"]
max_level_trace = ["tracing/max_level_trace"]

# Max log level (release build)
release_max_level_off = ["tracing/release_max_level_off"]
release_max_level_error = ["tracing/release_max_level_error"]
release_max_level_warn = ["tracing/release_max_level_warn"]
release_max_level_info = ["tracing/release_max_level_info"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[workspace]
members = [
    "lpc-rs-asm",
    "lpc-rs-core",
    "lpc-rs-driver",
    "lpc-rs-errors",
    "lpc-rs-function-support",
    "lpc-rs-lpcc",
    "lpc-rs-utils",
]

[profile.release]
lto = "thin"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.bench]
incremental = true