[package]
name = "lpc-rs"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
description = "lpc-rs LPC compiler and gamedriver suite."
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
lpc-rs-asm = { version = "0.1", path = "./lpc-rs-asm"}
lpc-rs-core = { version = "0.1", path = "./lpc-rs-core"}
lpc-rs-errors = { version = "0.1", path = "./lpc-rs-errors"}
lpc-rs-function-support = { version = "0.1", path = "./lpc-rs-function-support"}
lpc-rs-utils = { version = "0.1", path = "./lpc-rs-utils"}

arc-swap = { version = "1.6.0", features = ["weak"] }
arrayvec = "0.7.1"
async-recursion = "1.0.4"
async-trait = "0.1.68"
bit-set = "0.5.3"
bytes = "1.4.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
dashmap = "5.4.0"
decorum = "0.3.1"
delegate = "0.9.0"
derive_builder = "0.12.0"
educe = "0.4.18"
fs-err = "2.6.0"
flume = "0.10.14"
futures = "0.3.28"
if_chain = "1.0.1"
indexmap = { version = "1.8.2", features = ["serde"] }
indextree = { version = "4.3.1", features = ["deser"] }
itertools = "0.10.0"
lalrpop-util = "0.19.4"
lazy_format = "2.0.0"
logos = "0.13.0"
nectar = { git = "https://github.com/robertwayne/nectar", branch = "main" }
#nectar = { git = "https://github.com/xxx/nectar", branch = "main" }
#nectar = { path = "../nectar" }
once_cell = "1.10.0"
parking_lot = "0.12.1"
path-dedot = "3.0.18"
phf = { version = "0.11.0", features = ["macros"] }
readonly = "0.2.3"
regex = "1"
rmp-serde = "1.0.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
sharded-slab = "0.1.4"
shared_arena = "0.8.4"
slab = "0.4.8"
stable-vec = "0.4.0"
string-interner = "0.14.0"
termcolor = "1.1.2"
thin-vec = "0.2.12"
tokio = { version = "1", features = ["io-std", "sync", "fs", "tracing", "rt-multi-thread", "signal", "parking_lot", "net"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "~0.1"
ustr = "0.9.0"

[dev-dependencies]
beaver = "1.0.0"
claims = "0.7.1"
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support", "async_tokio"] }
ctor = "0.2.0"
factori = "1.1.0"
fake = "2.5.0"
indoc = "2.0.0"
tokio-test = "0.4.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
jemalloc-ctl = "0.5.0"

[features]
default = ["max_level_trace", "release_max_level_info"]

# Max log level (development build))
max_level_off = ["tracing/max_level_off"]
max_level_error = ["tracing/max_level_error"]
max_level_warn = ["tracing/max_level_warn"]
max_level_info = ["tracing/max_level_info"]
max_level_debug = ["tracing/max_level_debug"]
max_level_trace = ["tracing/max_level_trace"]

# Max log level (release build)
release_max_level_off = ["tracing/release_max_level_off"]
release_max_level_error = ["tracing/release_max_level_error"]
release_max_level_warn = ["tracing/release_max_level_warn"]
release_max_level_info = ["tracing/release_max_level_info"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[[bench]]

name = "bench_fib"
harness = false

[workspace]
members = [
    "lpc-rs-asm",
    "lpc-rs-core",
    "lpc-rs-driver",
    "lpc-rs-errors",
    "lpc-rs-function-support",
    "lpc-rs-lpcc",
    "lpc-rs-utils",
]

[profile.release]
lto = "thin"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.bench]
incremental = true