[package]
name = "lpc-rs-asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc-rs-core = { path = "../lpc-rs-core"}
lpc-rs-errors = { path = "../lpc-rs-errors"}

indexmap = { version = "1.8.2", features = ["serde"] }
itertools = "0.10.0"
serde = { version = "1.0.160", features = ["derive"] }
