[package]
name = "lpc-rs-asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc-rs-core = { path = "../lpc-rs-core"}
lpc-rs-errors = { path = "../lpc-rs-errors"}

itertools = "0.10.0"
serde = { version = "1.0.123", features = ["derive"] }
