[package]
name = "lpc-rs-asm"
description = "lpc-rs LPC compiler and gamedriver suite assembly language definition."
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
lpc-rs-core = { version = "0.1", path = "../lpc-rs-core"}
lpc-rs-errors = { version = "0.1", path = "../lpc-rs-errors"}
static_assertions = "1.1.0"

itertools = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
