[package]
name = "lpc-rs-core"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
decorum = "0.3.1"
fs-err = "2.6.0"
modular-bitfield = "0.11.2"
path-absolutize = { version = "3.0.6", features = ["lazy_static_cache"] }
serde = { version = "1.0.149", features = ["derive"] }
