[package]
name = "lpc-rs-core"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.3.0"
decorum = "0.3.1"
fs-err = "2.6.0"
indextree = { version = "4.3.1", features = ["deser"] }
modular-bitfield = "0.11.2"
once_cell = "1.17.1"
path-absolutize = { version = "3.0.6", features = ["lazy_static_cache"] }
serde = { version = "1.0.123", features = ["derive"] }
ustr = { version = "0.9.0", features = ["serialization"] }