[package]
name = "lpc-rs-core"
description = "lpc-rs LPC compiler and gamedriver suite core utilities."
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
bstr = "1.3.0"
decorum = "0.3.1"
derive_builder = "0.12.0"
indextree = { version = "4.3.1", features = ["deser"] }
modular-bitfield = "0.11.2"
once_cell = "1.17.1"
path-absolutize = { version = "3.0.6", features = ["lazy_static_cache"] }
serde = { version = "1.0.162", features = ["derive"] }
ustr = { version = "0.9.0", features = ["serialization"] }