[package]
name = "lpc-rs-driver"
description = "lpc-rs LPC compiler and gamedriver suite gamedriver. The server that runs the game."
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]
default-run = "lpc-rs-driver"

[dependencies]
lpc-rs = { version = "0.1", path = ".." }
lpc-rs-utils = { version = "0.1", path = "../lpc-rs-utils" }

clap = { version = "4.3.2", features = ["derive"] }
if_chain = "1.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tracing = "~0.1"
ustr = "0.9.0"