[package]
name = "lpc-rs-errors"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.42.0"
codespan-reporting = "0.11.0"
derive_builder = "0.12.0"
fs-err = "2.6.0"
if_chain = "1.0.1"
itertools = "0.10.0"
lalrpop-util = "0.19.4"
once_cell = "1.10.0"
parking_lot = "0.12.0"
serde = { version = "1.0.155", features = ["derive"] }
