[package]
name = "lpc-rs-errors"
description = "lpc-rs LPC compiler and gamedriver suite error support."
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
cached = "0.43.0"
codespan-reporting = "0.11.0"
derive_builder = "0.12.0"
fs-err = "2.6.0"
if_chain = "1.0.1"
itertools = "0.10.0"
lalrpop-util = "0.20.0"
once_cell = "1.10.0"
parking_lot = "0.12.0"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }