[package]
name = "lpc-rs-function-support"
description = "lpc-rs LPC compiler and gamedriver suite function support."
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
lpc-rs-asm = { version = "0.1", path = "../lpc-rs-asm" }
lpc-rs-core = { version = "0.1", path = "../lpc-rs-core" }
lpc-rs-errors = { version = "0.1", path = "../lpc-rs-errors" }

derive_builder = "0.12.0"
itertools = "0.10.0"
lazy_format = "2.0.0"
multimap = "0.9.0"
once_cell = "1.17.1"
readonly = "0.2.3"
serde = { version = "1.0.162", features = ["derive", "rc"] }
string-interner = "0.14.0"
tracing = "~0.1"
ustr = "0.9.0"