[package]
name = "lpc-rs-lpcc"
description = "A utility to quickly compile and run a single LPC file"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc-rs = { path = ".." }
lpc-rs-core = { path = "../lpc-rs-core" }
lpc-rs-utils = { path = "../lpc-rs-utils" }

clap = { version = "3.2.15", features = ["derive"] }