[package]
name = "lpc-rs-lpcc"
description = "A utility to quickly compile and run a single LPC file"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
lpc-rs = { version = "0.1", path = ".." }
lpc-rs-core = { version = "0.1", path = "../lpc-rs-core" }
lpc-rs-utils = { version = "0.1", path = "../lpc-rs-utils" }

clap = { version = "4.3.10", features = ["derive"] }
parking_lot = "0.12.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
ustr = "0.9.0"