[package]
name = "lpc-rs-utils"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc-rs-core = { path = "../lpc-rs-core"}
lpc-rs-errors = { path = "../lpc-rs-errors"}

fs-err = "2.6.0"
if_chain = "1.0.1"
toml = "0.7.2"
tracing = "0.1"

[dev-dependencies]
claim = "0.5.0"
