[package]
name = "lpc-rs-utils"
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc-rs-core = { path = "../lpc-rs-core"}
lpc-rs-errors = { path = "../lpc-rs-errors"}

derive_builder = "0.12.0"
dotenvy = "0.15.7"
fs-err = "2.6.0"
if_chain = "1.0.1"
readonly = "0.2.3"
tokio = { version = "1.27.0", features = ["fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
ustr = "0.9.0"

[dev-dependencies]
claims = "0.7.1"
tokio-test = "0.4.2"
