[package]
name = "lpc-rs-utils"
description = "lpc-rs LPC compiler and gamedriver suite ancillary utilities."
version = "0.1.0"
authors = ["mpd <mpd@jesters-court.net>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/xxx/lpc-rs"
license = "MIT"
keywords = ["lpc", "mud", "driver", "compiler"]
categories = ["command-line-utilities", "compilers", "game-engines"]

[dependencies]
lpc-rs-core = { version = "0.1", path = "../lpc-rs-core"}
lpc-rs-errors = { version = "0.1", path = "../lpc-rs-errors"}

derive_builder = "0.12.0"
dotenvy = "0.15.7"
fs-err = "2.6.0"
if_chain = "1.0.1"
readonly = "0.2.3"
tokio = { version = "1.28.2", features = ["fs", "io-util"] }
tracing = "~0.1"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
ustr = "0.9.0"

[dev-dependencies]
claims = "0.7.1"
tokio-test = "0.4.2"
